--- a/views/board/index.html
+++ b/views/board/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>board</title>
     <link rel="stylesheet" href="../css/index.css" />
+    <link rel="stylesheet" href="../css/book.css" />
     <link rel="stylesheet" href="../css/board.css" />
     <link
       rel="stylesheet"
