--- a/views/book/list.html
+++ b/views/book/list.html
@@ -74,11 +74,11 @@
         {% endfor %}
       </div>
       <div class="flex-direction-row list-bottom">
-        <div class="new-book"></div>
+        <div class="confirm-button"></div>
         <div class="page-wrapper">
-          <form id="page-form" method="get" action="/books/list?page=1">
+          <form id="book-page-form" method="get" action="/books/list?page=1">
             <input
-              id="page-input"
+              id="book-page-input"
               class="page input"
               placeholder="이동할 페이지 입력"
             />
