fix: book-content-n class 수정

--- a/views/book/toc/view.html
+++ b/views/book/toc/view.html
@@ -48,8 +48,8 @@
         <div class="bold book-category">{{book_category}}</div>
       </div>
       <div class="flex-direction-column">
-        <div class="book-content-1">목차</div>
-        <div class="flex-direction-column book-content-2">
+        <div class="content-1">목차</div>
+        <div class="flex-direction-column content-2">
           {% for toc in book_toc %}
           <div class="flex-direction-row">
             <a
@@ -61,8 +61,8 @@
           </div>
           {% endfor %}
         </div>
-        <div class="book-content-1">요약</div>
-        <div class="book-content-3">{{book_summary}}</div>
+        <div class="content-1">요약</div>
+        <div class="content-3">{{book_summary}}</div>
       </div>
       <div class="flex-direction-row bottom-wrapper">
         <a
