--- a/views/book/page/modify.html
+++ b/views/book/page/modify.html
@@ -51,11 +51,11 @@
       >
         <div class="flex-direction-column">
           <div class="flex-direction-row">
-            <div class="book-title book-content-1">{{toc_title}}</div>
-            <div class="book-category book-content-1"></div>
+            <div class="book-title content-1">{{toc_title}}</div>
+            <div class="book-category content-1"></div>
           </div>
           <textarea
-            class="input book-content-2"
+            class="input content-2"
             name="bookToc"
             cols="30"
             rows="10"
