--- a/views/book/toc/modify.html
+++ b/views/book/toc/modify.html
@@ -50,12 +50,12 @@
         action="/books/toc/modify?bookId={{book_uid}}"
       >
         <div class="flex-direction-column">
-          <div class="flex-direction-row book-content-1">
+          <div class="flex-direction-row content-1">
             <div class="book-title">{{book_title}}</div>
             <div class="book-category">{{book_category}}</div>
           </div>
           <textarea
-            class="input book-content-2"
+            class="input content-2"
             name="bookToc"
             cols="30"
             rows="10"
@@ -64,7 +64,7 @@
 {{book_toc}}</textarea
           >
           <textarea
-            class="input book-content-3"
+            class="input content-3"
             name="bookSummary"
             cols="10"
             rows="10"
