--- a/views/book/toc/write.html
+++ b/views/book/toc/write.html
@@ -50,7 +50,7 @@
         action="/books/toc/write"
       >
         <div class="flex-direction-column">
-          <div class="flex-direction-row book-content-1">
+          <div class="flex-direction-row content-1">
             <input
               type="text"
               class="input book-title"
@@ -65,14 +65,14 @@
             />
           </div>
           <textarea
-            class="input book-content-2"
+            class="input content-2"
             name="bookToc"
             cols="30"
             rows="10"
             placeholder="목차를 입력해주세요"
           ></textarea>
           <textarea
-            class="input book-content-3"
+            class="input content-3"
             name="bookSummary"
             cols="10"
             rows="10"
