--- a/views/book/list.html
+++ b/views/book/list.html
@@ -55,8 +55,10 @@
           <div class="big-book-image"></div>
           <div class="flex-direction-column">
             <div class="flex-direction-row book-content-wrapper">
-              <div class="title">{{book.book_title}}</div>
-              <div class="title">{{book.book_category}}</div>
+              <div class="simple-title book-title">{{book.book_title}}</div>
+              <div class="simple-title book-category">
+                {{book.book_category}}
+              </div>
             </div>
             <div class="flex-direction-row book-content-wrapper">
               {{book.book_summary}}
@@ -64,8 +66,8 @@
             <div class="flex-direction-row book-content-wrapper">
               <div class="simple-title">저자: {{book.book_writer}}</div>
               <div class="flex-direction-row">
-                <div class="simple-title">추천수: {{book.book_likes}}</div>
-                <div class="simple-title">조회수: {{book.book_views}}</div>
+                <div>추천수: {{book.book_likes}}</div>
+                <div>조회수: {{book.book_views}}</div>
               </div>
             </div>
           </div>
