fix: 데이터 전달 오류 수정

--- a/views/book/toc/view.html
+++ b/views/book/toc/view.html
@@ -56,7 +56,7 @@
               href="/books/page/view?bookId={{book_uid}}&tocId={{toc.toc_uid}}"
               class="link"
             >
-              {{ toc.toc_title }}
+              <pre>{{ toc.toc_title }}</pre>
             </a>
           </div>
           {% endfor %}
