--- a/views/book/page/modify.html
+++ b/views/book/page/modify.html
@@ -47,7 +47,7 @@
       <form
         class="flex-direction-column"
         method="post"
-        action="/books/toc/modify?bookId={{book_uid}}&tocId={{toc_uid}}"
+        action="/books/page/modify?bookId={{book_uid}}&tocId={{toc_uid}}"
       >
         <div class="flex-direction-column">
           <div class="flex-direction-row">
@@ -56,7 +56,7 @@
           </div>
           <textarea
             class="input content-2"
-            name="bookToc"
+            name="tocContent"
             cols="30"
             rows="10"
             placeholder="내용을 입력해주세요"
