--- a/views/public/css/index.css
+++ b/views/public/css/index.css
@@ -4,6 +4,7 @@
   font-size: 16px;
   color: #333;
   box-sizing: border-box;
+  font-family: "Noto Sans KR", sans-serif;
 }
 a {
   text-decoration: none;
@@ -224,7 +225,7 @@ div.flex-direction-row.bottom-wrapper {
 .flex-direction-column .content-2 {
   width: 904px;
   font-size: 24px;
-  min-height: 240px;
+  min-height: 400px;
 }
 .content-2 .flex-direction-row {
   width: 904px;
