--- a/views/user/reset.html
+++ b/views/user/reset.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Reset</title>
+    <title>비밀번호 재설정</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;400;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="../css/index.css" />
     <link rel="stylesheet" href="../css/user.css" />
   </head>
