--- a/views/book/toc/view.html
+++ b/views/book/toc/view.html
@@ -55,7 +55,7 @@
       </div>
       <div class="flex-direction-column">
         <div class="content-1">목차</div>
-        <div class="flex-direction-column content-2">
+        <div class="flex-direction-column content-2 show-toc">
           {% for toc in book_toc %}
           <div class="flex-direction-row">
             <a
