--- a/views/board/write.html
+++ b/views/board/write.html
@@ -10,13 +10,13 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;400;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../../css/index.css" />
-    <link rel="stylesheet" href="../../css/board.css" />
+    <link rel="stylesheet" href="../css/index.css" />
+    <link rel="stylesheet" href="../css/board.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
     />
-    <script defer src="../../js/index.js"></script>
+    <script defer src="../js/index.js"></script>
   </head>
   <body>
     <div class="top-wrapper">
