feat: /board/ 작성

--- a/views/public/css/board.css
+++ b/views/public/css/board.css
@@ -1,7 +1,11 @@
-.board-title {
+input.board-title {
   width: 904px;
   font-size: 24px;
   padding: 16px;
+}
+div.board-title {
+  width: 904px;
+  font-size: 24px;
 }
 
 .board-big-title {
