fix: first_toc_uid 수정

--- a/views/index.html
+++ b/views/index.html
@@ -54,7 +54,7 @@
         <div class="bold title">추천 도서</div>
         <div class="flex-direction-row">
           <a
-            href="/books/view?bookId={{bookListOrderByLikes[0].book_uid}}&tocId={{bookListOrderByLikes[0].toc_uid}}"
+            href="/books/view?bookId={{bookListOrderByLikes[0].book_uid}}&tocId={{bookListOrderByLikes[0].first_toc_uid}}"
           >
             <div class="big-book">
               <div class="big-book-image"></div>
@@ -69,7 +69,7 @@
           <div class="flex-direction-column">
             <div class="flex-direction-row">
               <a
-                href="/books/view?bookId={{bookListOrderByLikes[1].book_uid}}&tocId={{bookListOrderByLikes[1].toc_uid}}"
+                href="/books/view?bookId={{bookListOrderByLikes[1].book_uid}}&tocId={{bookListOrderByLikes[1].first_toc_uid}}"
               >
                 <div class="medium-book">
                   <div class="medium-book-image"></div>
@@ -79,7 +79,7 @@
                 </div>
               </a>
               <a
-                href="/books/view?bookId={{bookListOrderByLikes[2].book_uid}}&tocId={{bookListOrderByLikes[2].toc_uid}}"
+                href="/books/view?bookId={{bookListOrderByLikes[2].book_uid}}&tocId={{bookListOrderByLikes[2].first_toc_uid}}"
               >
                 <div class="medium-book">
                   <div class="medium-book-image"></div>
@@ -91,28 +91,28 @@
             </div>
             <div class="flex-direction-row">
               <a
-                href="/books/view?bookId={{bookListOrderByLikes[3].book_uid}}&tocId={{bookListOrderByLikes[3].toc_uid}}"
+                href="/books/view?bookId={{bookListOrderByLikes[3].book_uid}}&tocId={{bookListOrderByLikes[3].first_toc_uid}}"
               >
                 <div class="small-book">
                   <div class="small-book-image"></div>
                 </div>
               </a>
               <a
-                href="/books/view?bookId={{bookListOrderByLikes[4].book_uid}}&tocId={{bookListOrderByLikes[4].toc_uid}}"
+                href="/books/view?bookId={{bookListOrderByLikes[4].book_uid}}&tocId={{bookListOrderByLikes[4].first_toc_uid}}"
               >
                 <div class="small-book">
                   <div class="small-book-image"></div>
                 </div>
               </a>
               <a
-                href="/books/view?bookId={{bookListOrderByLikes[5].book_uid}}&tocId={{bookListOrderByLikes[5].toc_uid}}"
+                href="/books/view?bookId={{bookListOrderByLikes[5].book_uid}}&tocId={{bookListOrderByLikes[5].first_toc_uid}}"
               >
                 <div class="small-book">
                   <div class="small-book-image"></div>
                 </div>
               </a>
               <a
-                href="/books/view?bookId={{bookListOrderByLikes[6].book_uid}}&tocId={{bookListOrderByLikes[6].toc_uid}}"
+                href="/books/view?bookId={{bookListOrderByLikes[6].book_uid}}&tocId={{bookListOrderByLikes[6].first_toc_uid}}"
               >
                 <div class="small-book">
                   <div class="small-book-image"></div>
@@ -129,42 +129,42 @@
         <div class="bold title">신간 도서</div>
         <div class="flex-direction-row">
           <a
-            href="/books/view?bookId={{bookListOrderByDate[0].book_uid}}&tocId={{bookListOrderByDate[0].toc_uid}}"
+            href="/books/view?bookId={{bookListOrderByDate[0].book_uid}}&tocId={{bookListOrderByDate[0].first_toc_uid}}"
           >
             <div class="small-book">
               <div class="small-book-image"></div>
             </div>
           </a>
           <a
-            href="/books/view?bookId={{bookListOrderByDate[1].book_uid}}&tocId={{bookListOrderByDate[1].toc_uid}}"
+            href="/books/view?bookId={{bookListOrderByDate[1].book_uid}}&tocId={{bookListOrderByDate[1].first_toc_uid}}"
           >
             <div class="small-book">
               <div class="small-book-image"></div>
             </div>
           </a>
           <a
-            href="/books/view?bookId={{bookListOrderByDate[2].book_uid}}&tocId={{bookListOrderByDate[2].toc_uid}}"
+            href="/books/view?bookId={{bookListOrderByDate[2].book_uid}}&tocId={{bookListOrderByDate[2].first_toc_uid}}"
           >
             <div class="small-book">
               <div class="small-book-image"></div>
             </div>
           </a>
           <a
-            href="/books/view?bookId={{bookListOrderByDate[3].book_uid}}&tocId={{bookListOrderByDate[3].toc_uid}}"
+            href="/books/view?bookId={{bookListOrderByDate[3].book_uid}}&tocId={{bookListOrderByDate[3].first_toc_uid}}"
           >
             <div class="small-book">
               <div class="small-book-image"></div>
             </div>
           </a>
           <a
-            href="/books/view?bookId={{bookListOrderByDate[4].book_uid}}&tocId={{bookListOrderByDate[4].toc_uid}}"
+            href="/books/view?bookId={{bookListOrderByDate[4].book_uid}}&tocId={{bookListOrderByDate[4].first_toc_uid}}"
           >
             <div class="small-book">
               <div class="small-book-image"></div>
             </div>
           </a>
           <a
-            href="/books/view?bookId={{bookListOrderByDate[5].book_uid}}&tocId={{bookListOrderByDate[5].toc_uid}}"
+            href="/books/view?bookId={{bookListOrderByDate[5].book_uid}}&tocId={{bookListOrderByDate[5].first_toc_uid}}"
           >
             <div class="small-book">
               <div class="small-book-image"></div>
