fix: user/ nunjucks 수정

--- a/views/user/auth.html
+++ b/views/user/auth.html
@@ -18,7 +18,7 @@
       <div class="window">
         <div class="bold title">회원정보</div>
         <form class="flex-direction-column" method="post" action="/users/auth">
-          <div class="bold title">{{user_nickname}}</div>
+          <div class="bold title">{{user_id}}</div>
           <div class="input">
             <input
               type="password"
