--- a/views/user/info.html
+++ b/views/user/info.html
@@ -33,8 +33,10 @@
               placeholder="새로운 비밀번호를 입력해주세요"
             />
           </div>
-          <div class="bold">가입일: {{user_created_at}}</div>
-          <div class="bold">작성한 도서 수: {{book_writer_count}}</div>
+          <div class="bold simple-title">가입일: {{user_created_at}}</div>
+          <div class="bold simple-title">
+            작성한 도서 수: {{book_writer_count}}
+          </div>
           <div class="button-wrapper">
             <a href="/users/exit" class="sub-button button">탈퇴하기</a>
             <button class="main-button button" type="submit">수정완료</button>
