--- a/views/book/view.html
+++ b/views/book/view.html
@@ -30,22 +30,34 @@
       <div class="flex-direction-row max-width max-height">
         <div class="flex-direction-column toc-list">
           <div class="bold simple-title">목차</div>
-          {% for toc in book_toc %}
-          <a href="/books/view?bookId={{book_uid}}&tocId={{toc.toc_uid}}">
+          {% for toc in tocList %}
+          <a href="/books/view?bookId={{toc.toc_book}}&tocId={{toc.toc_uid}}">
+            {% if toc.toc_uid === {{toc_uid}} %}
+            <div class="highlight div-button">{{toc.toc_title}}</div>
+            {% else %}
             <div class="div-button">{{toc.toc_title}}</div>
+            {% endif %}
           </a>
           {% endfor %}
         </div>
         <div class="flex-direction-column book-content-area">
-          <div class="bold simple-title">{{toc_title}}toc_title</div>
-          <div class="book-content">{{toc_content}}내용</div>
+          <div class="bold simple-title">{{tocContent.toc_title}}</div>
+          <div class="book-content">{{tocContent.toc_content}}</div>
         </div>
       </div>
       <div class="flex-direction-row max-width">
         <a class="main-button confirm-button">추천하기</a>
         <div class="flex-direction-row">
-          <a class="main-button confirm-button">책 수정하기</a>
-          <a class="main-button confirm-button">삭제하기</a>
+          <a
+            href="/books/toc/view?bookId={{tocList[0].toc_book}}"
+            class="main-button confirm-button"
+            >책 수정하기</a
+          >
+          <a
+            href="/books/delete?bookId={{tocList[0].toc_book}}"
+            class="main-button confirm-button"
+            >삭제하기</a
+          >
         </div>
       </div>
     </div>
