--- a/views/book/search.html
+++ b/views/book/search.html
@@ -83,17 +83,12 @@
       <div class="flex-direction-row list-bottom">
         <div class="confirm-button"></div>
         <div class="page-wrapper">
-          <form
-            id="search-page-form"
-            method="get"
-            action="/books/list?search={{book_search}}page=1"
-          >
-            <input
-              id="search-page-input"
-              class="page input"
-              placeholder="이동할 페이지 입력"
-            />
-          </form>
+          {% for page in pagination.paginationArray %} {% if page ===
+          currentPage %}
+          <a class="bold page-button" href="/boards?page={{page}}">{{page}}</a>
+          {% else %}
+          <a class="page-button" href="/boards?page={{page}}">{{page}}</a>
+          {% endif %} {% endfor %}
         </div>
         <a href="/books/toc/write" class="main-button confirm-button"
           >새 책 쓰기</a
@@ -101,20 +96,4 @@
       </div>
     </div>
   </body>
-  <script>
-    function searchPageAction() {
-      const inputValue = document.getElementById("search-page-input").value;
-      const newAction =
-        "/books/search?bookSearch={{book_search}}&page=" + inputValue;
-
-      location.href = newAction;
-    }
-
-    document
-      .getElementById("search-page-form")
-      .addEventListener("submit", function (event) {
-        event.preventDefault();
-        searchPageAction();
-      });
-  </script>
 </html>
