--- a/views/book/list.html
+++ b/views/book/list.html
@@ -88,11 +88,13 @@
       <div class="flex-direction-row list-bottom">
         <div class="confirm-button"></div>
         <div class="page-wrapper">
-          {% for page in pagination.paginationArray %} {% if page ===
-          currentPage %}
-          <a class="bold page-button" href="/boards?page={{page}}">{{page}}</a>
+          {% for page in pagination.paginationArray %} {% if page ==
+          pagination.currentPage %}
+          <a class="bold page-button" href="/books/list?page={{page}}"
+            >{{page}}</a
+          >
           {% else %}
-          <a class="page-button" href="/boards?page={{page}}">{{page}}</a>
+          <a class="page-button" href="/books/list?page={{page}}">{{page}}</a>
           {% endif %} {% endfor %}
         </div>
         <a href="/books/toc/write" class="main-button confirm-button"
