--- a/views/public/css/index.css
+++ b/views/public/css/index.css
@@ -268,6 +268,7 @@ div.flex-direction-row.bottom-wrapper {
 
 .page-button {
   width: 32px;
+  display: inline;
 }
 .div-button {
   display: flex;
