--- a/views/book/search.html
+++ b/views/book/search.html
@@ -87,13 +87,13 @@
           currentPage %}
           <a
             class="bold page-button"
-            href="/books/list?search={{book_search}}&page={{page}}"
+            href="/books/list?bookSearch={{book_search}}&page={{page}}"
             >{{page}}</a
           >
           {% else %}
           <a
             class="page-button"
-            href="/books/list?search={{book_search}}&page={{page}}"
+            href="/books/list?bookSearch={{book_search}}&page={{page}}"
             >{{page}}</a
           >
           {% endif %} {% endfor %}
