--- a/views/board/index.html
+++ b/views/board/index.html
@@ -75,7 +75,7 @@
         <div class="confirm-button"></div>
         <div class="page-wrapper">
           {% for page in pagination.paginationArray %} {% if page ===
-          currentPage %}
+          pagination.currentPage %}
           <a class="bold page-button" href="/boards?page={{page}}">{{page}}</a>
           {% else %}
           <a class="page-button" href="/boards?page={{page}}">{{page}}</a>
