--- a/views/book/view.html
+++ b/views/book/view.html
@@ -32,7 +32,7 @@
           <div class="bold simple-title">목차</div>
           {% for toc in tocList %}
           <a href="/books/view?bookId={{toc.toc_book}}&tocId={{toc.toc_uid}}">
-            {% if toc.toc_uid === {{toc_uid}} %}
+            {% if toc.toc_uid === toc_uid %}
             <div class="highlight div-button">{{toc.toc_title}}</div>
             {% else %}
             <div class="div-button">{{toc.toc_title}}</div>
