--- a/views/book/view.html
+++ b/views/book/view.html
@@ -46,8 +46,13 @@
         </div>
       </div>
       <div class="flex-direction-row max-width">
+        {% if user_id !== book_writer %}
         <a class="main-button confirm-button">추천하기</a>
+        {% else %}
+        <a class="confirm-button"></a>
+        {% endif %}
         <div class="flex-direction-row">
+          {% if user_id === book_writer %}
           <a
             href="/books/toc/view?bookId={{tocList[0].toc_book}}"
             class="main-button confirm-button"
@@ -58,6 +63,10 @@
             class="main-button confirm-button"
             >삭제하기</a
           >
+          {% else %}
+          <a class="confirm-button"></a>
+          <a class="confirm-button"></a>
+          {% endif %}
         </div>
       </div>
     </div>
