fix: book_title 텍스트 삭제

--- a/views/book/view.html
+++ b/views/book/view.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div class="top-wrapper">
-      <div class="top-left bold simple-title">{{book_title}}book_title</div>
+      <div class="top-left bold simple-title">{{book_title}}</div>
       <div class="top-right">
         <a href="/" class="close"
           ><span class="material-symbols-outlined"> close </span></a
