feat: 로그아웃 버튼 추가

--- a/views/user/auth.html
+++ b/views/user/auth.html
@@ -27,6 +27,7 @@
             />
           </div>
           <div class="button-wrapper">
+            <a href="/users/logout" class="sub-button button">로그아웃</a>
             <button class="main-button button" type="submit">
               회원정보 설정
             </button>
