--- a/views/book/toc/write.html
+++ b/views/book/toc/write.html
@@ -1,102 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>책 구성하기</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-            href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;400;700;900&display=swap"
-            rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;400;700;900&display=swap"
+      rel="stylesheet"
     />
-    <link rel="stylesheet" href="../../css/index.css"/>
-    <link rel="stylesheet" href="../../css/book.css"/>
+    <link rel="stylesheet" href="../../css/index.css" />
+    <link rel="stylesheet" href="../../css/book.css" />
     <link
-            rel="stylesheet"
-            href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
     />
     <script defer src="../../js/index.js"></script>
-</head>
-<body>
-<div class="top-wrapper">
-    <div class="top-left">
+  </head>
+  <body>
+    <div class="top-wrapper">
+      <div class="top-left">
         <a href="/">
-            <div class="logo">BookHub</div>
+          <div class="logo">BookHub</div>
         </a>
         <div class="message">
-            {%if user_nickname%} {{user_nickname}}님, 환영합니다! {%else%}
-            로그인이 필요합니다. {%endif%}
+          {%if user_nickname%} {{user_nickname}}님, 환영합니다! {%else%}
+          로그인이 필요합니다. {%endif%}
         </div>
-    </div>
-    <div class="top-right">
+      </div>
+      <div class="top-right">
         <a href="/boards?page=1" class="board">공지사항</a>
         <div class="input search">
-            <form id="search-form" method="get" action="/search">
-                <input id="search-input" type="text" placeholder="클릭해서 검색"/>
-                <button type="submit">
-                    <span class="material-symbols-outlined"> search </span>
-                </button>
-            </form>
+          <form id="search-form" method="get" action="/search">
+            <input id="search-input" type="text" placeholder="클릭해서 검색" />
+            <button type="submit">
+              <span class="material-symbols-outlined"> search </span>
+            </button>
+          </form>
         </div>
         {%if user_nickname%}
         <a href="/users/auth"
-        ><span class="material-symbols-outlined"> person </span></a
+          ><span class="material-symbols-outlined"> person </span></a
         >
         {%else%}
         <a href="/users/login"
-        ><span class="material-symbols-outlined"> person </span></a
+          ><span class="material-symbols-outlined"> person </span></a
         >
         {%endif%}
+      </div>
     </div>
-</div>
-<div class="content-wrapper">
-    <div class="bold title">책 구성하기</div>
-    <form
-            enctype="multipart/form-data"
-            class="flex-direction-column"
-            method="post"
-            action="/books/toc/write"
-    >
-        <input type="file" name="image" accept="image/*">
+    <div class="content-wrapper">
+      <form
+        enctype="multipart/form-data"
+        class="flex-direction-column"
+        method="post"
+        action="/books/toc/write"
+      >
+        <div class="flex-direction-row image-input">
+          <div class="bold title">책 구성하기</div>
+          <div class="small-book-image">
+            <input
+              class="small-book-image input-file"
+              type="file"
+              name="image"
+              accept="image/*"
+            />
+            <span class="material-symbols-outlined add-image"> add </span>
+          </div>
+        </div>
         <div class="flex-direction-column">
-            <div class="flex-direction-row content-1">
-                <input
-                        type="text"
-                        class="input book-title"
-                        name="bookTitle"
-                        placeholder="제목을 입력해주세요"
-                />
-                <input
-                        type="text"
-                        class="input book-category"
-                        name="bookCategory"
-                        placeholder="카테고리를 입력해주세요"
-                />
-            </div>
-            <textarea
-                    class="input content-2"
-                    name="bookToc"
-                    cols="30"
-                    rows="10"
-                    placeholder="목차를 입력해주세요"
-            ></textarea>
-            <textarea
-                    class="input content-3"
-                    name="bookSummary"
-                    cols="10"
-                    rows="10"
-                    placeholder="요약을 입력해주세요"
-            ></textarea>
+          <div class="flex-direction-row content-1">
+            <input
+              type="text"
+              class="input book-title"
+              name="bookTitle"
+              placeholder="제목을 입력해주세요"
+            />
+            <input
+              type="text"
+              class="input book-category"
+              name="bookCategory"
+              placeholder="카테고리를 입력해주세요"
+            />
+          </div>
+          <textarea
+            class="input content-2"
+            name="bookToc"
+            cols="30"
+            rows="10"
+            placeholder="목차를 입력해주세요"
+          ></textarea>
+          <textarea
+            class="input content-3"
+            name="bookSummary"
+            cols="10"
+            rows="10"
+            placeholder="요약을 입력해주세요"
+          ></textarea>
         </div>
         <div class="flex-direction-row bottom-wrapper">
-            <a class="main-button confirm-button" type="submit"
-            >
-                <button>작성 완료</button>
-            </a
-            >
+          <a class="main-button confirm-button" type="submit">
+            <button>작성 완료</button>
+          </a>
         </div>
-    </form>
-</div>
-</body>
+      </form>
+    </div>
+  </body>
 </html>
