fix: book image 수정

--- a/views/index.html
+++ b/views/index.html
@@ -57,7 +57,13 @@
             href="/books/view?bookId={{bookListOrderByLikes[0].book_uid}}&tocId={{bookListOrderByLikes[0].first_toc_uid}}"
           >
             <div class="big-book">
-              <div class="big-book-image"></div>
+              <div class="big-book-image">
+                <img
+                  class="big-book"
+                  src="{{bookListOrderByLikes[0].book_image}}"
+                  alt=""
+                />
+              </div>
               <div class="simple-title">
                 {{bookListOrderByLikes[0].book_title}}
               </div>
@@ -72,7 +78,13 @@
                 href="/books/view?bookId={{bookListOrderByLikes[1].book_uid}}&tocId={{bookListOrderByLikes[1].first_toc_uid}}"
               >
                 <div class="medium-book">
-                  <div class="medium-book-image"></div>
+                  <div class="medium-book-image">
+                    <img
+                      class="medium-book"
+                      src="{{bookListOrderByLikes[1].book_image}}"
+                      alt=""
+                    />
+                  </div>
                   <div class="simple-title">
                     {{bookListOrderByLikes[1].book_title}}
                   </div>
@@ -82,7 +94,13 @@
                 href="/books/view?bookId={{bookListOrderByLikes[2].book_uid}}&tocId={{bookListOrderByLikes[2].first_toc_uid}}"
               >
                 <div class="medium-book">
-                  <div class="medium-book-image"></div>
+                  <div class="medium-book-image">
+                    <img
+                      class="medium-book"
+                      src="{{bookListOrderByLikes[2].book_image}}"
+                      alt=""
+                    />
+                  </div>
                   <div class="simple-title">
                     {{bookListOrderByLikes[2].book_title}}
                   </div>
@@ -94,28 +112,52 @@
                 href="/books/view?bookId={{bookListOrderByLikes[3].book_uid}}&tocId={{bookListOrderByLikes[3].first_toc_uid}}"
               >
                 <div class="small-book">
-                  <div class="small-book-image"></div>
+                  <div class="small-book-image">
+                    <img
+                      class="small-book"
+                      src="{{bookListOrderByLikes[3].book_image}}"
+                      alt=""
+                    />
+                  </div>
                 </div>
               </a>
               <a
                 href="/books/view?bookId={{bookListOrderByLikes[4].book_uid}}&tocId={{bookListOrderByLikes[4].first_toc_uid}}"
               >
                 <div class="small-book">
-                  <div class="small-book-image"></div>
+                  <div class="small-book-image">
+                    <img
+                      class="small-book"
+                      src="{{bookListOrderByLikes[4].book_image}}"
+                      alt=""
+                    />
+                  </div>
                 </div>
               </a>
               <a
                 href="/books/view?bookId={{bookListOrderByLikes[5].book_uid}}&tocId={{bookListOrderByLikes[5].first_toc_uid}}"
               >
                 <div class="small-book">
-                  <div class="small-book-image"></div>
+                  <div class="small-book-image">
+                    <img
+                      class="small-book"
+                      src="{{bookListOrderByLikes[5].book_image}}"
+                      alt=""
+                    />
+                  </div>
                 </div>
               </a>
               <a
                 href="/books/view?bookId={{bookListOrderByLikes[6].book_uid}}&tocId={{bookListOrderByLikes[6].first_toc_uid}}"
               >
                 <div class="small-book">
-                  <div class="small-book-image"></div>
+                  <div class="small-book-image">
+                    <img
+                      class="small-book"
+                      src="{{bookListOrderByLikes[6].book_image}}"
+                      alt=""
+                    />
+                  </div>
                 </div>
               </a>
             </div>
@@ -132,42 +174,78 @@
             href="/books/view?bookId={{bookListOrderByDate[0].book_uid}}&tocId={{bookListOrderByDate[0].first_toc_uid}}"
           >
             <div class="small-book">
-              <div class="small-book-image"></div>
+              <div class="small-book-image">
+                <img
+                  class="small-book"
+                  src="{{bookListOrderByDate[0].book_image}}"
+                  alt=""
+                />
+              </div>
             </div>
           </a>
           <a
             href="/books/view?bookId={{bookListOrderByDate[1].book_uid}}&tocId={{bookListOrderByDate[1].first_toc_uid}}"
           >
             <div class="small-book">
-              <div class="small-book-image"></div>
+              <div class="small-book-image">
+                <img
+                  class="small-book"
+                  src="{{bookListOrderByDate[1].book_image}}"
+                  alt=""
+                />
+              </div>
             </div>
           </a>
           <a
             href="/books/view?bookId={{bookListOrderByDate[2].book_uid}}&tocId={{bookListOrderByDate[2].first_toc_uid}}"
           >
             <div class="small-book">
-              <div class="small-book-image"></div>
+              <div class="small-book-image">
+                <img
+                  class="small-book"
+                  src="{{bookListOrderByDate[2].book_image}}"
+                  alt=""
+                />
+              </div>
             </div>
           </a>
           <a
             href="/books/view?bookId={{bookListOrderByDate[3].book_uid}}&tocId={{bookListOrderByDate[3].first_toc_uid}}"
           >
             <div class="small-book">
-              <div class="small-book-image"></div>
+              <div class="small-book-image">
+                <img
+                  class="small-book"
+                  src="{{bookListOrderByDate[3].book_image}}"
+                  alt=""
+                />
+              </div>
             </div>
           </a>
           <a
             href="/books/view?bookId={{bookListOrderByDate[4].book_uid}}&tocId={{bookListOrderByDate[4].first_toc_uid}}"
           >
             <div class="small-book">
-              <div class="small-book-image"></div>
+              <div class="small-book-image">
+                <img
+                  class="small-book"
+                  src="{{bookListOrderByDate[4].book_image}}"
+                  alt=""
+                />
+              </div>
             </div>
           </a>
           <a
             href="/books/view?bookId={{bookListOrderByDate[5].book_uid}}&tocId={{bookListOrderByDate[5].first_toc_uid}}"
           >
             <div class="small-book">
-              <div class="small-book-image"></div>
+              <div class="small-book-image">
+                <img
+                  class="small-book"
+                  src="{{bookListOrderByDate[5].book_image}}"
+                  alt=""
+                />
+              </div>
             </div>
           </a>
         </div>
