--- a/views/public/css/book.css
+++ b/views/public/css/book.css
@@ -20,30 +20,31 @@
   width: 336px;
 }
 .big-book-image {
+  display: flex;
+  align-items: center;
   width: 336px;
   height: 460px;
-  background-color: #ccc;
   cursor: pointer;
 }
 .medium-book {
   width: 252px;
 }
 .medium-book-image {
+  display: flex;
+  align-items: center;
   width: 252px;
   height: 345px;
-  background-color: #ccc;
   cursor: pointer;
 }
 
 .small-book {
   width: 126px;
-  z-index: 1;
-  overflow: hidden;
 }
 .small-book-image {
+  display: flex;
+  align-items: center;
   width: 126px;
   height: 172px;
-  background-color: #ccc;
   cursor: pointer;
   position: relative;
 }
