--- a/views/book/list.html
+++ b/views/book/list.html
@@ -75,7 +75,7 @@
                 {{book.book_summary}}
               </div>
               <div class="flex-direction-row book-content-wrapper">
-                <div class="simple-title">저자: {{book.book_writer}}</div>
+                <div>저자: {{book.book_writer}}</div>
                 <div class="flex-direction-row">
                   <div>추천수: {{book.book_likes}}</div>
                   <div>조회수: {{book.book_views}}</div>
