--- a/views/book/view.html
+++ b/views/book/view.html
@@ -45,7 +45,7 @@
           <div class="book-content">{{tocContent.toc_content}}</div>
         </div>
       </div>
-      <div class="flex-direction-row max-width">
+      <div class="flex-direction-row max-width button-wrapper">
         {% if user_id !== book_writer %}
         <a class="main-button confirm-button">추천하기</a>
         {% else %}
