--- a/views/public/css/book.css
+++ b/views/public/css/book.css
@@ -67,7 +67,7 @@ div.book-title {
 div.book-category {
   width: 320px;
   font-size: 24px;
-  text-align: center;
+  text-align: right;
 }
 
 div.flex-direction-column.content-2.show-toc {
